# FileClient

./: .gitignore  CMakeLists.txt  README.md  config.ini  思路文档.md
protos/: transfer.pb.cc  transfer.pb.h  transfer.proto
resources/: FileClient.rc  config.html  help.qrc  icons.qrc  overview.html  themes.qrc  transfer.html
resources/themes/: dark.qss  light.qss
shared/: Logger.cpp  Logger.h  TransferDefs.h  TransferProtocol.h
src/: AddressBar.cpp  AddressBar.h  AnimationHelper.cpp  AnimationHelper.h  AppConfig.cpp  AppConfig.h  Commhead.h  ConfigDialog.cpp  ConfigDialog.h  FileClient.cpp  FileClient.h  FileListView.cpp  FileListView.h  FileTabPage.cpp  FileTabPage.h  HelpDialog.cpp  HelpDialog.h  LoadingSpinner.cpp  LoadingSpinner.h  LocalFileSystemModel.cpp  LocalFileSystemModel.h  LogWidget.cpp  LogWidget.h  Net_Tool.cpp  Net_Tool.h  NotificationWidget.cpp  NotificationWidget.h  ProgressBarAnimation.cpp  ProgressBarAnimation.h  ProgressWidget.cpp  ProgressWidget.h  RemoteFileSystemModel.cpp  RemoteFileSystemModel.h  TaskManagerDialog.cpp  TaskManagerDialog.h  ThemeManager.cpp  ThemeManager.h  TransferHistory.cpp  TransferHistory.h  TransferHistoryDialog.cpp  (+6 more)
